--- a/style.css
+++ b/style.css
@@ -37,31 +37,42 @@ h2{
 
 .grid{
     display: grid;
-    max-width: 800px;
+    max-width: 780px;
     height: 500px;
     margin:500px auto;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    grid-template-areas: "bloco1 bloco1" "bloco2 bloco3 ";
+    grid-template-rows: 2fr 1fr 1fr;
+    grid-template-areas: 
+    
+    "bloco1 bloco1" 
+    "bloco2 bloco3 ";
+    border-radius: 10px;
+    box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.315);
 }
 
 .grid-item1 h1 {
+    padding-top: 30px;
     height: 70px;
+    margin: 35px;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
 }
 .grid-item1 h2 { 
     color: hsl(71, 73%, 54%);
     font-weight: 700;
-    height: 40px;
+    height: 10px;
+    margin: 35px;
 }
 
 .grid-item1 p{
     color: rgb(152, 166, 189) ;
-
+    margin: 35px;
 }
 .grid-item2{
     background-color:#2ab2af;
     padding: 25px;
     padding-bottom: 5px;
+    border-bottom-left-radius: 10px;
 
 } 
 .grid-item2 h2{
@@ -89,6 +100,7 @@ h2{
 .grid-item3{
     background-color:#4abebd;
     padding: 35px;
+    border-bottom-right-radius: 10px;
 } 
 .grid-item3 h2{
     color: #eaffff;
